removed storm enterprise script